--- a/index.css
+++ b/index.css
@@ -292,15 +292,16 @@ body {
 
   display: flex;
   justify-content: space-around;
+  align-items: center;
 
-  padding: 5px 0 0;
+  padding: 5px 20px;
   background: var(--grey);
 
   box-shadow: 0 -10px 10px rgba(0,0,0,.1);
 }
 
 .menu > div {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .cta {
@@ -310,9 +311,12 @@ body {
   justify-content: center;
   align-items: center;
 
+  font-weight: 100;
   color: white;
 
   margin-top: -20px;
   border-radius: 15px;
   background: var(--blue);
+
+  box-shadow: 0 0 10px rgba(0,0,0,.5);
 }
